<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/ImageView"
        app:srcCompat="@drawable/skeleton4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="165dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="53dp"
        android:layout_toEndOf="@+id/imageView"
        android:textColor="#FFFFFF"
        android:text="@string/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="128dp"
        android:layout_height="38dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="92dp"
        android:layout_toEndOf="@+id/imageView"
        android:textColor="#FFFFFF"
        android:text="@string/textView2" />
</RelativeLayout>